--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -2,32 +2,55 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.blanch {
+  font-family: var(--font-blanch);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.custom-shadow-menu0 {
+  box-shadow: 0 -24px 48px 0 rgba(105, 132, 26, 0.2),
+    0 24px 48px 0 rgba(105, 132, 26, 0.2),
+    0 -48px 48px 0 rgba(105, 132, 26, 0.4),
+    0 48px 48px 0 rgba(105, 132, 26, 0.4);
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.custom-shadow-menu1 {
+  box-shadow: 0 -24px 48px 0 rgba(255, 170, 5, 0.2),
+    0 24px 48px 0 rgba(255, 170, 5, 0.2), 0 -48px 48px 0 rgba(255, 170, 5, 0.4),
+    0 48px 48px 0 rgba(255, 170, 5, 0.4);
+}
+.custom-shadow-black {
+  box-shadow: 0 -24px 48px 0 rgba(46, 46, 46, 0.2),
+    0 24px 48px 0 rgba(46, 46, 46, 0.2), 0 -48px 48px 0 rgba(46, 46, 46, 0.4),
+    0 48px 48px 0 rgba(46, 46, 46, 0.4);
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.custom-shadow-menu2 {
+  box-shadow: 
+    0 -24px 48px 0 rgba(139, 205, 166, 0.2),
+    0 24px 48px 0 rgba(139, 205, 166, 0.2),
+    0 -48px 48px 0 rgba(139, 205, 166, 0.4),
+    0 48px 48px 0 rgba(139, 205, 166, 0.4);
+}
+
+.custom-shadow-menu3 {
+  box-shadow: 
+    0 -24px 48px 0 rgba(255, 92, 0, 0.2),
+    0 24px 48px 0 rgba(255, 92, 0, 0.2),
+    0 -48px 48px 0 rgba(255, 92, 0, 0.4),
+    0 48px 48px 0 rgba(255, 92, 0, 0.4);
+}
+
+
+.custom-shadow-white {
+  box-shadow: inset 0 -12px 24px 0 rgba(255, 255, 255, 0.2),
+    inset 0 12px 24px 0 rgba(255, 255, 255, 0.2),
+    0 -48px 48px 0 rgba(255, 255, 255, 0.4),
+    0 48px 48px 0 rgba(255, 255, 255, 0.4);
+}
+
+.custom-shadow-green {
+  box-shadow: 0 -12px 24px 0 rgba(139, 205, 166, 0.2),
+    0 12px 24px 0 rgba(139, 205, 166, 0.2),
+    0 -48px 48px 0 rgba(139, 205, 166, 0.4),
+    0 48px 48px 0 rgba(139, 205, 166, 0.4);
 }
