--- a/frontend/app/curve.css
+++ b/frontend/app/curve.css
@@ -12,8 +12,5 @@
     display: block;
     width: calc(189% + 1.3px);
     height: 800px;
-}
-
-.custom-shape-divider-bottom-1709363450 .shape-fill {
-    fill: #DEDEDE;
+    transform: scaleX(1.1);
 }
