--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+*,
+html,
+body {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  line-height: 0;
+}
+
 .blanch {
   font-family: var(--font-blanch);
 }
