--- a/frontend/app/curve.css
+++ b/frontend/app/curve.css
@@ -14,3 +14,19 @@
     height: 800px;
     transform: scaleX(1.1);
 }
+
+.custom-shape-divider-bottom-1709375037 {
+    width: 100%;
+    /* transform: rotateY(180deg); */
+    overflow: hidden;
+    line-height: 0;
+    transform: rotateX(180deg);
+}
+
+.custom-shape-divider-bottom-1709375037 svg {
+    position: relative;
+    display: block;
+    width: calc(200% + 600px);
+    height: 600px;
+}
+
