--- a/frontend/app/curve.css
+++ b/frontend/app/curve.css
@@ -1,3 +1,4 @@
+/* hero */
 .custom-shape-divider-bottom-1709363450 {
     position: absolute;
     bottom: 0;
@@ -15,9 +16,9 @@
     transform: scaleX(1.1);
 }
 
+/* form */
 .custom-shape-divider-bottom-1709375037 {
     width: 100%;
-    /* transform: rotateY(180deg); */
     overflow: hidden;
     line-height: 0;
     transform: rotateX(180deg);
