style: fixed gradients in about and form section

--- a/frontend/app/curve.css
+++ b/frontend/app/curve.css
@@ -31,3 +31,19 @@
     height: 600px;
 }
 
+/* about us */
+.custom-shape-divider-bottom-1709382700 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+}
+
+.custom-shape-divider-bottom-1709382700 svg {
+    position: relative;
+    display: block;
+    width: calc(145% + 1.3px);
+    height: 280px;
+}
