--- a/frontend/app/curve.css
+++ b/frontend/app/curve.css
@@ -12,7 +12,7 @@
     position: relative;
     display: block;
     width: calc(189% + 1.3px);
-    height: 800px;
+    /* height: 800px; */
     transform: scaleX(1.1);
 }
 
